--- a/trunk/ace/README
+++ b/trunk/ace/README
@@ -148,6 +148,9 @@ ACE_HAS_ALLOCA                          Compiler/platform supports
                                         alloca()
 ACE_HAS_ALLOCA_H                        Compiler/platform has
                                         <alloca.h>
+ACE_HAS_ALPHA_TIMER                     CPU is an Alpha, with the rpcc
+                                        instruction to read the tick timer.
+                                        Limited to 32 bits, so not recommended.
 ACE_HAS_AUTOMATIC_INIT_FINI             Compiler/platform correctly
                                         calls init()/fini() for shared
                                         libraries
