--- a/trunk/apps/gperf/ChangeLog
+++ b/trunk/apps/gperf/ChangeLog
@@ -1,3 +1,11 @@
+Fri Oct  9 01:06:56 1998  Alexander Babu Arulanthu  <alex@cs.wustl.edu>
+
+	* src/Options.cpp : 
+	* src/Key_List.cpp (output_linear_search_function): 
+	Changed option -z to -b for generating linear search. Removed
+	<len> parameter from the lookup code. We dont need <len> in the
+	generated code in the case of linear/binary search options.
+
 Thu Oct  8 17:40:19 1998  Vishal Kachroo  <vishal@merengue.cs.wustl.edu>
 
 	* src/Gen_Perf.cpp (run): added the linear search changes.
