*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -649,6 +649,7 @@ Jason Milley <Jason.Milley.jcmilley@nt.com>
 Ulf Jaehrig <jaehrig@desys.com>
 Peter Nordlund <petern@nada.kth.se>
 Mark Weel <weel@lucent.com>
+Tres Seaver <tseaver@palladion.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
