Added yet another contributor.

--- a/trunk/README
+++ b/trunk/README
@@ -503,6 +503,7 @@ Ben Eng <ben@jetpen.com>
 Mike Kamrad <J.M.KAMRAD.II@cdev.com>
 Marios Zikos <zikos@csi.forth.gr>
 Mark L Boriack <mboriack@std.saic.com>
+Mark Hyett <mhyett@std.saic.com>
 Caleb Epstein <epstein_caleb_unix@jpmorgan.com>
 Valik Solrzano Barboza <valik@xs4all.nl>
 John Connett <jrc@skylon.demon.co.uk>
