*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -651,6 +651,7 @@ Ulf Jaehrig <jaehrig@desys.com>
 Peter Nordlund <petern@nada.kth.se>
 Mark Weel <weel@lucent.com>
 Tres Seaver <tseaver@palladion.com>
+Erik Koerber <erik.koerber@siemens.at>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
