--- a/trunk/README
+++ b/trunk/README
@@ -652,6 +652,7 @@ Peter Nordlund <petern@nada.kth.se>
 Mark Weel <weel@lucent.com>
 Tres Seaver <tseaver@palladion.com>
 Erik Koerber <erik.koerber@siemens.at>
+Eric R. Medley <palantir@net56.net>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
