--- a/trunk/TAO/orbsvcs/Naming_Service/README
+++ b/trunk/TAO/orbsvcs/Naming_Service/README
@@ -12,13 +12,17 @@ To Run:
 ======
 
         % Naming_Service [-ORBport port] [-ORBobjrefstyle url]
-                         [-ORBnameserviceport nsport] 
+                         [-ORBnameserviceport nsport] [-s context_size]
 
 Arguments:
-==========        
+==========
         port - The ORB port
         nsport - Multicast port.
- 
+        context_size - Size of the hash table allocated upon the
+        creation of the root Naming Context (if one is created).
+        (All contexts created under the root will use the same size
+        for their hash tables).
+
 Environment Variables:
 =====================
 
@@ -39,16 +43,16 @@ listening as object <iiop:1.0//tango:20000/P35194c690003809cRootPOA/child_poa/Na
 The multicast server setup is done.
 
 NameService Client:
-==================        
+==================
 
         A client of the TAO Naming Service will use the ORB
 resolve_initial_references to resolve the NamingService object. This
 will be done using Multicast by default. This behavior can be
 overridden by these 2 ways.
 
-        1. passing the argument -ORBnameserviceior ior. 
+        1. passing the argument -ORBnameserviceior ior.
            This ior is got from the output of the Naming_Service from
-           line 'listening as object <iiop:..>'. 
+           line 'listening as object <iiop:..>'.
 
         2. setting the env. variable 'NameService'.
 
@@ -56,7 +60,7 @@ For example if a client wants to use the Naming_Service from the
 sample run it would be like,
 
         %client -ORBnameserviceior
-                <iiop:1.0//tango:20000/P35194c690003809cRootPOA/child_poa/NameService> 
+                <iiop:1.0//tango:20000/P35194c690003809cRootPOA/child_poa/NameService>
 
 or set the environment variable,
 
@@ -72,5 +76,3 @@ or set the environment variable,
 more than one NamingService to avoid the confusion of a server
 registering its object with one NamingService and the client getting
 the reply from some other NamingService.
-
-                
