*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -653,6 +653,7 @@ Mark Weel <weel@lucent.com>
 Tres Seaver <tseaver@palladion.com>
 Erik Koerber <erik.koerber@siemens.at>
 Eric R. Medley <palantir@net56.net>
+David O'Farrell <dave@virgo.aersoft.ie>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
