--- a/trunk/README
+++ b/trunk/README
@@ -654,6 +654,7 @@ Tres Seaver <tseaver@palladion.com>
 Erik Koerber <erik.koerber@siemens.at>
 Eric R. Medley <palantir@net56.net>
 David O'Farrell <dave@virgo.aersoft.ie>
+Amir Bahmanyari <abahmany@teknowledge.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
