added Ian Wright <I.Wright@elsevier.co.uk>

--- a/trunk/README
+++ b/trunk/README
@@ -655,6 +655,7 @@ Erik Koerber <erik.koerber@siemens.at>
 Eric R. Medley <palantir@net56.net>
 David O'Farrell <dave@virgo.aersoft.ie>
 Amir Bahmanyari <abahmany@teknowledge.com>
+Ian Wright <I.Wright@elsevier.co.uk>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
