*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -656,6 +656,7 @@ Eric R. Medley <palantir@net56.net>
 David O'Farrell <dave@virgo.aersoft.ie>
 Amir Bahmanyari <abahmany@teknowledge.com>
 Ian Wright <I.Wright@elsevier.co.uk>
+David Janello <David.Janello@abnamro.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
