*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -605,7 +605,6 @@ Hongyin Quan <hq1@arl.wustl.edu>
 Maximilian Hoferer <mhoferer@krones.de>
 Kevin Stanley <kstanley1@mdc.com>
 Jeff Greif <jmg@trivida.com>
-Avi Nash <anash@RedBrick.COM>
 Jeff McDaniel <jsmcdani@gte.net>
 Andreas Geisler <andreas.geisler@erls.siemens.de>
 Bob McWhirter <bob@netwrench.com>
@@ -657,6 +656,7 @@ David O'Farrell <dave@virgo.aersoft.ie>
 Amir Bahmanyari <abahmany@teknowledge.com>
 Ian Wright <I.Wright@elsevier.co.uk>
 David Janello <David.Janello@abnamro.com>
+Rich Wellner <rw2@wellner.org>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
