added Fernando D. Mato Mira <matomira@acm.org>

--- a/trunk/README
+++ b/trunk/README
@@ -657,6 +657,7 @@ Amir Bahmanyari <abahmany@teknowledge.com>
 Ian Wright <I.Wright@elsevier.co.uk>
 David Janello <David.Janello@abnamro.com>
 Rich Wellner <rw2@wellner.org>
+Fernando D. Mato Mira <matomira@acm.org>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
