--- a/trunk/ace/README
+++ b/trunk/ace/README
@@ -78,6 +78,7 @@ ACE_WSOCK_VERSION                       A parameter list indicating
                                         the version of WinSock (e.g.,
                                         "1, 1" is version 1.1).
 
+ACE_HAS_AIO_CALLS                       Platform supports POSIX aio* calls.
 ACE_HAS_ANSI_CASTS                      Platform supports new C++
                                         style casts (dynamic_cast,
                                         static_cast, reinterpret_cast
