added ACE_HAS_PTHREAD_PROCESS_ENUM support

--- a/trunk/ace/README
+++ b/trunk/ace/README
@@ -383,6 +383,9 @@ ACE_HAS_PTHREADS_STD                    Platform supports POSIX.1c-1995 threads
 ACE_HAS_PTHREAD_CONDATTR_SETKIND_NP     Platform has pthread_condattr_setkind_np().
 ACE_HAS_PTHREAD_MUTEXATTR_SETKIND_NP    Platform has
                                         pthread_mutexattr_setkind_np().
+ACE_HAS_PTHREAD_PROCESS_ENUM            pthread.h declares an enum with
+                                        PTHREAD_PROCESS_PRIVATE and
+                                        PTHREAD_PROCESS_SHARED values.
 ACE_HAS_PTHREAD_SIGMASK                 Platform has pthread_sigmask()
                                         defined.
 ACE_HAS_PURIFY                          Purify'ing.  Set by wrapper_macros.GNU.
