--- a/trunk/ace/README
+++ b/trunk/ace/README
@@ -235,6 +235,7 @@ ACE_HAS_CONSISTENT_SIGNAL_PROTOTYPES    Prototypes for both signal()
 ACE_HAS_CPLUSPLUS_HEADERS               Compiler/platform has
                                         correctly prototyped header
                                         files
+ACE_HAS_CYGWIN32_SOCKET_H               Platform has cygwin32 socket.h
 ACE_HAS_DIRENT                          Compiler/platform has Dirent
                                         iterator functions
 ACE_HAS_DLFCN_H_BROKEN_EXTERN_C         For platforms, e.g., RedHat
@@ -680,6 +681,8 @@ ACE_LACKS_MADVISE                       Platform lacks madvise()
 ACE_LACKS_MALLOC_H                      Platform lacks malloc.h
 ACE_LACKS_MEMORY_H                      Platform lacks memory.h (e.g.,
                                         VxWorks and Chorus)
+ACE_LACKS_MKFIFO                        Platform lacks mkfifo() e.g.,
+                                        VxWorks, Chorus, pSoS, and WinNT.
 ACE_LACKS_MKTEMP                        ACE has no mktemp()
 ACE_LACKS_MMAP                          The platform doesn't have
                                         mmap(2) (e.g., SCO UNIX).
