--- a/trunk/README
+++ b/trunk/README
@@ -659,6 +659,7 @@ David Janello <David.Janello@abnamro.com>
 Rich Wellner <rw2@wellner.org>
 Fernando D. Mato Mira <matomira@acm.org>
 Jonathan Reis <reis@minniemouse.cemax.com>
+Seung-Lee Hoon <tarjan@lgsoft.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
