--- a/trunk/README
+++ b/trunk/README
@@ -660,6 +660,7 @@ Rich Wellner <rw2@wellner.org>
 Fernando D. Mato Mira <matomira@acm.org>
 Jonathan Reis <reis@minniemouse.cemax.com>
 Seung-Lee Hoon <tarjan@lgsoft.com>
+Bill Hall <hts@gte.net>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
