*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -664,6 +664,7 @@ Russell L. Carter <rcarter@dnstoo.consys.com>
 Bill Hall <hts@gte.net>
 Brian Gilstrap <gilstrap_b@ociweb.com>
 Balaji Srinivasan <balaji@cplane.com>
+Anders W. Tell <anderst@toolsmiths.se>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
