--- a/trunk/README
+++ b/trunk/README
@@ -665,6 +665,7 @@ Bill Hall <hts@gte.net>
 Brian Gilstrap <gilstrap_b@ociweb.com>
 Balaji Srinivasan <balaji@cplane.com>
 Anders W. Tell <anderst@toolsmiths.se>
+Larry <larry@paradigmsim.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
