*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -264,7 +264,7 @@ Todd Hoff <thm@ictv.com>
 George <george@truffula.fp.trw.com>
 Brad Needham <bneedham@ix.netcom.com>
 Leslee Xu <lxu@ics.uci.edu>
-Detlef Becker <beckerd@erlh.siemens.de>
+Detlef Becker <detlef.becker@med.siemens.de>
 Bruce Worden <bruce@betsy.gps.caltech.edu>
 Chris Tarr <ctarr@objectspace.co>
 Bill Sears <wsears@world.std.com>
@@ -297,7 +297,7 @@ Todd Blanchard <tblancha@evolving.com>
 Rob Clairmont <rclairmo@bnr.ca>
 Christian Millour <chris@etca.fr>
 Neil Cohen <nbc@metsci.com>
-Dieter Quehl <quehl@csaserv.erlh.siemens.de>
+Dieter Quehl <dieter.quehl@med.siemens.de>
 Reginald S. Perry <perry@zso.dec.com>
 James Morris <jmorris@aurora.apana.org.au>
 Mark Seaborn <mseaborn@itthp1.comm.mot.com>
