--- a/trunk/TAO/performance-tests/Demux/CodeGen/README
+++ b/trunk/TAO/performance-tests/Demux/CodeGen/README
@@ -1,12 +1,30 @@
-This directory contains a code generator that will generate stubs and
-skeletons for an interface called "tao_demux". The number of
-operations in this interface is controlled by the -m option to the
-executable "tao".
+// $Id$
+// ============================================================================
+//
+// = LIBRARY
+//    TAO/performance-tests/Demux/CodeGen
+//
+// = FILENAME
+//    README
+//
+// = AUTHOR
+//
+//    Aniruddha Gokhale
+//
+// ============================================================================
 
-Usage:
+This directory contains the code generator for the Demux Test.
 
-tao -o <num of objs> -m < num of operations>
+Command line options
 
-The stubs and skeletons are for 2-way calls. The operation names and
-object keys are automatically generated and have arbitrary string
-names. 
+demux -m <num ops>
+      -o <num objs>  (not useful until we add USER_ID policy to the
+                      demux server)
+      -p <num POAs>
+
+This will generate an interface definition for the Demux_Test
+interface in a file called "demux_test.idl". The code generator will
+also produce the demux_test_i.{h, cpp} files that implement the
+interface. A "demux_test_client.i" produces some client-side code that
+must be included with the client.
+
