--- a/trunk/ace/README
+++ b/trunk/ace/README
@@ -688,6 +688,8 @@ ACE_LACKS_MPROTECT                      The platform doesn't have
                                         mprotect(2) (e.g., EPLX real
                                         time OS from CDC (based on
                                         LYNX))
+ACE_LACKS_MSG_ACCRIGHTS                 Platform defines ACE_HAS_MSG,
+                                        but lacks msg_accrights{,len}.
 ACE_LACKS_MSGBUF_T                      Platform lacks struct msgbuf
                                         (e.g., NT and MSV).
 ACE_LACKS_MSYNC                         Platform lacks msync() (e.g.,
