*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -666,6 +666,7 @@ Brian Gilstrap <gilstrap_b@ociweb.com>
 Balaji Srinivasan <balaji@cplane.com>
 Anders W. Tell <anderst@toolsmiths.se>
 Larry <larry@paradigmsim.com>
+Terry Rosenbaum <Terry.Rosenbaum@Radiology.MSU.edu> 
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
