--- a/trunk/TAO/performance-tests/Cubit/TAO/MT_Cubit/README
+++ b/trunk/TAO/performance-tests/Cubit/TAO/MT_Cubit/README
@@ -182,3 +182,40 @@ RESULTS
 The client prints the latency observed by the high priority client,
 and the average latency observed by the low priority clients. Jitter
 (standard deviation of the latency) is also printed by the client.
+
+
+Running MT_Cubit on CHORUS:
+--------------------------
+
+1.You should make sure that you set the HOST environment variable on the
+Chorus VME Board to the IP address of that Board before you run
+MT_Cubit test.
+
+e.g
+$rsh tambora1 setenv HOST 128.252.165.82
+
+2. You should make sure that the path to IOR file has write permission
+for ALL.
+
+server:
+------
+$rsh host_name arun path_to_server -h DOTTED_DECIMAL_ADDRESS -f path_to_ior_file -ORBdotteddecimaladdresses 1 <server_options>
+
+Since Chorus doesn't support DNS, you should pass
+dotted_decimal_address of the machine to -h option.
+
+You DONT have to use -ORBdotteddecimaladdresses 1 if you have
+TAO_USE_DOTTED_DECIMAL_ADDRESSES defined in your config.h file. 
+
+e.g
+$rsh tambora1 arun /MT_Cubit/server -h 128.252.165.82 -f /ior
+-ORBdotteddecimaladdresses 1 -t 10 -ORBobjrefstyle url
+
+client:
+-------
+
+$rsh host_name arun  path_to_client -f path_to_ior_file
+
+e.g
+
+$rsh tambora2 arun /MT_Cubit/client -f /ior -t 10 -n 300
