--- a/trunk/TAO/performance-tests/Cubit/TAO/MT_Cubit/README
+++ b/trunk/TAO/performance-tests/Cubit/TAO/MT_Cubit/README
@@ -199,10 +199,11 @@ for ALL.
 
 server:
 ------
-$rsh host_name arun path_to_server -h DOTTED_DECIMAL_ADDRESS -f path_to_ior_file -ORBdotteddecimaladdresses 1 <server_options>
+$rsh host_name arun path_to_server -h DOTTED_DECIMAL_ADDRESS
+ -f path_to_ior_file -ORBdotteddecimaladdresses 1 <server_options> 
 
 Since Chorus doesn't support DNS, you should pass
-dotted_decimal_address of the machine to -h option.
+dotted_decimal_address of the server machine to -h option.
 
 You DONT have to use -ORBdotteddecimaladdresses 1 if you have
 TAO_USE_DOTTED_DECIMAL_ADDRESSES defined in your config.h file. 
@@ -214,7 +215,7 @@ $rsh tambora1 arun /MT_Cubit/server -h 128.252.165.82 -f /ior
 client:
 -------
 
-$rsh host_name arun  path_to_client -f path_to_ior_file
+$rsh host_name arun  path_to_client -f path_to_ior_file <client_options>
 
 e.g
 
