--- a/trunk/TAO/performance-tests/Cubit/TAO/IDL_Cubit/README
+++ b/trunk/TAO/performance-tests/Cubit/TAO/IDL_Cubit/README
@@ -140,3 +140,36 @@ javac *.java
 
 Run:
 java IDL_Cubit_Client
+
+Running IDL_Cubit on CHORUS:
+--------------------------
+
+1.You should make sure that you set the HOST environment variable on the
+Chorus VME Board to the IP address of that Board before you run
+MT_Cubit test.
+
+e.g
+$rsh tambora1 setenv HOST 128.252.165.82
+
+2. You should make sure that the path to IOR file has write permission
+for ALL.
+
+server:
+------
+$rsh host_name arun path_to_server -o path_to_ior_file -ORBdotteddecimaladdresses 1 <server_options> 
+
+You DONT have to use -ORBdotteddecimaladdresses 1 if you have
+TAO_USE_DOTTED_DECIMAL_ADDRESSES defined in your config.h file. 
+
+e.g
+$rsh tambora1 arun /IDL_Cubit/server  -o /ior
+-ORBdotteddecimaladdresses 1 -ORBobjrefstyle url
+
+client:
+-------
+
+$rsh host_name arun path_to_client -f path_to_ior_file <client_options>
+
+e.g
+
+$rsh tambora2 arun /IDL_Cubit/client -f /ior
