added Rainer Blome <rainer_blome@de.ibm.com>

--- a/trunk/README
+++ b/trunk/README
@@ -660,13 +660,14 @@ Rich Wellner <rw2@wellner.org>
 Fernando D. Mato Mira <matomira@acm.org>
 Jonathan Reis <reis@minniemouse.cemax.com>
 Seung-Lee Hoon <tarjan@lgsoft.com>
-Russell L. Carter <rcarter@dnstoo.consys.com> 
+Russell L. Carter <rcarter@dnstoo.consys.com>
 Bill Hall <hts@gte.net>
 Brian Gilstrap <gilstrap_b@ociweb.com>
 Balaji Srinivasan <balaji@cplane.com>
 Anders W. Tell <anderst@toolsmiths.se>
 Larry <larry@paradigmsim.com>
-Terry Rosenbaum <Terry.Rosenbaum@Radiology.MSU.edu> 
+Terry Rosenbaum <Terry.Rosenbaum@Radiology.MSU.edu>
+Rainer Blome <rainer_blome@de.ibm.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
