*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -324,7 +324,6 @@ Chris Eich <Chris_Eich@optilink.optilink.dsccc.com>
 Mike Flinn <mike.flinn@smtpgate.aws.waii.com>
 Audun Tornquist <Audun.Tornquist@iu.hioslo.no>
 Sandeep Joshi <sandeepj@emailbox.att.com>
-Kirk Sinnard <1764@mn.lawson.lawson.com>
 Bernd Hofner <hofner@pd.et-inf.uni-siegen.de>
 Craig Perras <craigp@wolfenet.com>
 Kirk Sinnard <kirk.sinnard@lawson.com>
@@ -668,6 +667,8 @@ Anders W. Tell <anderst@toolsmiths.se>
 Larry <larry@paradigmsim.com>
 Terry Rosenbaum <Terry.Rosenbaum@Radiology.MSU.edu>
 Rainer Blome <rainer_blome@de.ibm.com>
+Kirk Ellett <kellett@mdc.com>
+Sunil Kumar <skumar@sutmyn.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
