*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -669,6 +669,7 @@ Terry Rosenbaum <Terry.Rosenbaum@Radiology.MSU.edu>
 Rainer Blome <rainer_blome@de.ibm.com>
 Kirk Ellett <kellett@mdc.com>
 Sunil Kumar <skumar@sutmyn.com>
+Stach <t.stach@inobis.de>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
