--- a/trunk/README
+++ b/trunk/README
@@ -670,6 +670,7 @@ Rainer Blome <rainer_blome@de.ibm.com>
 Kirk Ellett <kellett@mdc.com>
 Sunil Kumar <skumar@sutmyn.com>
 T Stach <t.stach@inobis.de>
+Ron Barack <r.barack@inobis.de>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
