--- a/trunk/TAO/examples/Simple/echo/README
+++ b/trunk/TAO/examples/Simple/echo/README
@@ -12,7 +12,9 @@ server [-d] [-o <ior_output_file>]
 Options:
 -------
 -d    Debug flag (It is additive more -d flags will give debugging).
--o    Outputs the server ior to the file
+-o    Outputs the ior to the file
+      The ior is the refernce using which the client can interact with
+      the target server object.
 
 When the server is started, you should see as the first line of output
 something that looks like
