*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -671,6 +671,7 @@ Kirk Ellett <kellett@mdc.com>
 Sunil Kumar <skumar@sutmyn.com>
 T Stach <t.stach@inobis.de>
 Ron Barack <r.barack@inobis.de>
+Daniel Nieten <dnieten@bellsouth.net>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
