Replaced __TEXT with ACE_TEXT

--- a/trunk/README
+++ b/trunk/README
@@ -672,6 +672,7 @@ Sunil Kumar <skumar@sutmyn.com>
 T Stach <t.stach@inobis.de>
 Ron Barack <r.barack@inobis.de>
 Daniel Nieten <dnieten@bellsouth.net>
+Paul K. Fisher <pfisher@plexware.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
