--- a/trunk/README
+++ b/trunk/README
@@ -673,6 +673,7 @@ T Stach <t.stach@inobis.de>
 Ron Barack <r.barack@inobis.de>
 Daniel Nieten <dnieten@bellsouth.net>
 Paul K. Fisher <pfisher@plexware.com>
+Jim Buck <jim@nowsol.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
