--- a/trunk/README
+++ b/trunk/README
@@ -674,6 +674,7 @@ Ron Barack <r.barack@inobis.de>
 Daniel Nieten <dnieten@bellsouth.net>
 Paul K. Fisher <pfisher@plexware.com>
 Jim Buck <jim@nowsol.com>
+Olivier Lau <olivier_lau@srtelecom.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
