--- a/trunk/README
+++ b/trunk/README
@@ -675,6 +675,8 @@ Daniel Nieten <dnieten@bellsouth.net>
 Paul K. Fisher <pfisher@plexware.com>
 Jim Buck <jim@nowsol.com>
 Olivier Lau <olivier_lau@srtelecom.com>
+Achim Stindt <stindt@inobis.de>
+Fredrik Lindahl <fredrik.lindahl@ausys.se>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
