*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -677,6 +677,7 @@ Jim Buck <jim@nowsol.com>
 Olivier Lau <olivier_lau@srtelecom.com>
 Achim Stindt <stindt@inobis.de>
 Fredrik Lindahl <fredrik.lindahl@ausys.se>
+Joseph Weihs <joseph-w@Orbotech.Co.IL>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
