*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -678,6 +678,7 @@ Olivier Lau <olivier_lau@srtelecom.com>
 Achim Stindt <stindt@inobis.de>
 Fredrik Lindahl <fredrik.lindahl@ausys.se>
 Joseph Weihs <joseph-w@Orbotech.Co.IL>
+Serge Kolgan <skolgan@cisco.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
