--- a/trunk/README
+++ b/trunk/README
@@ -679,6 +679,7 @@ Achim Stindt <stindt@inobis.de>
 Fredrik Lindahl <fredrik.lindahl@ausys.se>
 Joseph Weihs <joseph-w@Orbotech.Co.IL>
 Serge Kolgan <skolgan@cisco.com>
+James Megquier <jmegq@bbn.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
