--- a/trunk/README
+++ b/trunk/README
@@ -680,6 +680,7 @@ Fredrik Lindahl <fredrik.lindahl@ausys.se>
 Joseph Weihs <joseph-w@Orbotech.Co.IL>
 Serge Kolgan <skolgan@cisco.com>
 James Megquier <jmegq@bbn.com>
+Martin Krumpolec <krumpo@pobox.sk>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
