--- a/trunk/README
+++ b/trunk/README
@@ -201,7 +201,7 @@ comp.soft-sys.ace.
 
 BUILDING AND INSTALLING ACE
 
-Please refer to the http://www.cs.wustl.edu/~schmidt/ACE-Install.html
+Please refer to the http://www.cs.wustl.edu/~schmidt/ACE-install.html
 file for information on how to build and test the ACE wrappers.  The
 BIBLIOGRAPHY file contains information on where to obtain articles
 that describe the ACE wrappers and the ADAPTIVE system in more detail.
@@ -681,6 +681,7 @@ Joseph Weihs <joseph-w@Orbotech.Co.IL>
 Serge Kolgan <skolgan@cisco.com>
 James Megquier <jmegq@bbn.com>
 Martin Krumpolec <krumpo@pobox.sk>
+Michael Thomas <Michael.Thomas@Australia.Boeing.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
