--- a/trunk/README
+++ b/trunk/README
@@ -682,6 +682,7 @@ Serge Kolgan <skolgan@cisco.com>
 James Megquier <jmegq@bbn.com>
 Martin Krumpolec <krumpo@pobox.sk>
 Michael Thomas <Michael.Thomas@Australia.Boeing.com>
+Vincentini Emanuele <arena.sci.univr.it>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
