--- a/trunk/README
+++ b/trunk/README
@@ -683,6 +683,7 @@ James Megquier <jmegq@bbn.com>
 Martin Krumpolec <krumpo@pobox.sk>
 Michael Thomas <Michael.Thomas@Australia.Boeing.com>
 Vincentini Emanuele <arena.sci.univr.it>
+Bob Price <Bob_Price@tssdc.saic.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
