*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -684,6 +684,7 @@ Martin Krumpolec <krumpo@pobox.sk>
 Michael Thomas <Michael.Thomas@Australia.Boeing.com>
 Vincentini Emanuele <arena.sci.univr.it>
 Bob Price <Bob_Price@tssdc.saic.com>
+Ramiro Penataro Blanco <penataro@ll.iac.es>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
