--- a/trunk/README
+++ b/trunk/README
@@ -685,6 +685,7 @@ Michael Thomas <Michael.Thomas@Australia.Boeing.com>
 Vincentini Emanuele <arena.sci.univr.it>
 Bob Price <Bob_Price@tssdc.saic.com>
 Ramiro Penataro Blanco <penataro@ll.iac.es>
+Sigg Pascal <pascal.sigg@zkb.ch>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
