--- a/trunk/README
+++ b/trunk/README
@@ -686,6 +686,7 @@ Vincentini Emanuele <arena.sci.univr.it>
 Bob Price <Bob_Price@tssdc.saic.com>
 Ramiro Penataro Blanco <penataro@ll.iac.es>
 Sigg Pascal <pascal.sigg@zkb.ch>
+Ivan Leong <ivanl@pacific.net.sg>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
