*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -682,7 +682,7 @@ Serge Kolgan <skolgan@cisco.com>
 James Megquier <jmegq@bbn.com>
 Martin Krumpolec <krumpo@pobox.sk>
 Michael Thomas <Michael.Thomas@Australia.Boeing.com>
-Vincentini Emanuele <arena.sci.univr.it>
+Vicentini Emanuele <arena.sci.univr.it>
 Bob Price <Bob_Price@tssdc.saic.com>
 Ramiro Penataro Blanco <penataro@ll.iac.es>
 Sigg Pascal <pascal.sigg@zkb.ch>
