--- a/trunk/README
+++ b/trunk/README
@@ -688,6 +688,7 @@ Ramiro Penataro Blanco <penataro@ll.iac.es>
 Sigg Pascal <pascal.sigg@zkb.ch>
 Ivan Leong <ivanl@pacific.net.sg>
 Virginie Amar<vamar@amadeus.net>
+Tom Ziomek <tomz@cc.comm.mot.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
